# medical_transcript_assistant

./: .pre-commit-config.yaml  README.md  example.env  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  system_prompt.txt  user_prompt.txt
docs/: ai_training.md  models.md  more_examples.md  patient_record.txt  terms.md
logs/: 20250414T175841Z_response.txt  20250414T175958Z_response.txt  20250414T180428Z_response.json  20250414T180428Z_response.txt  20250414T180810Z_response.json  20250414T180810Z_response.txt  20250414T181034Z_response.json  20250414T181034Z_response.txt  20250414T182038Z_response.json  20250414T182038Z_response.txt  20250414T182130Z_response.json  20250414T182130Z_response.txt  20250414T182221Z_response.json  20250414T182221Z_response.txt  20250414_response.txt  20250415T175553Z_E11.9_response.json  20250415T175553Z_E11.9_response.txt  20250415T175636Z_J45.901_response.json  20250415T175636Z_J45.901_response.txt  20250415T175646Z_M54.5_response.json  20250415T175646Z_M54.5_response.txt  20250415T175653Z_F41.1_response.json  20250415T175653Z_F41.1_response.txt  20250415T175905Z_E11.9_response.json  20250415T175905Z_E11.9_response.txt  20250415T175913Z_J45.901_response.json  20250415T175913Z_J45.901_response.txt  20250415T175917Z_M54.5_response.json  20250415T175917Z_M54.5_response.txt  20250415T175925Z_F41.1_response.json  20250415T175925Z_F41.1_response.txt  20250415T180001Z_D48.5_Z12.83_response.json  20250415T180001Z_D48.5_Z12.83_response.txt  20250415T182754Z_E11.9_response.json  20250415T182754Z_E11.9_response.txt  (+38 more)
(+6 files in other folders)
